# YM_quant

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
outputs/q1a/: cv_folds.csv  cv_summary.csv  holdout_metrics.csv  next_hour_prediction.csv
outputs/q2b/: fama_macbeth_summary.csv  quintile_sharpe.csv
q1/: q1a_btc_predict.py  q1b_fama_macbeth.py
q2/: q2a_factors.py  q2b_fama_macbeth.py
q3/: strategy_design.md
scripts/: run_1a.sh  run_all.sh
src/btc_forecast/: __init__.py  binance_client.py  cli.py  config.py  dataset.py  evaluate.py  features.py  model.py  pipeline.py  split.py  types.py
src/btc_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_features.py  test_pipeline_smoke.py  test_split.py
